# PriceTracker

./: pyproject.toml  requirements.txt
pricetracker/: urls.py
